--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3"
-  }
+    "@openzeppelin/contracts": "^4.9.3",
+    "@truffle/hdwallet-provider": "^2.1.14",
+    "dotenv": "^16.3.1",
+    "truffle": "^5.11.3"
+  },
+  "name": "gas-fee-subsidize",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
